# faster-qwen-asr

./: .gitignore  README.md  bench_results_NVIDIA_GB10.json  benchmark.sh  pyproject.toml
benchmarks/: compare_parakeet.py  profile_torch.py  throughput.py  vllm_direct.py
examples/: streaming.py  transcribe.py
faster_qwen_asr/: __main__.py  cli.py  model.py  torch_backend.py
tests/: test_public_api.py
